filtros funcionando (falta precio) + test